Added smart load balancing

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,29 +1,25 @@
 {
   "OpenAIEndpoints": [
-    {
-      "Name": "gpt-4o-mini",
-      "Url": "https://serinaopenai.openai.azure.com/openai/deployments/gpt-4o-mini/chat/completions?api-version=2025-01-01-preview",
-      "ApiKey": "",
-      "Type": "Azure",
-      "MaxConcurrent": 2
-    },
-    {
-      "Name": "gpt-4o-mini",
-      "Url": "https://serinaopenai.openai.azure.com/openai/deployments/gpt-4o-mini/chat/completions?api-version=2025-01-01-preview",
-      "ApiKey": "",
-      "Type": "Azure",
-      "MaxConcurrent": 2
-    },
+ 
+
 
     {
       "Name": "Llama3.2",
-      "Url": "http://localhost:11434",
+      "Url": "http://192.168.88.105:11434",
       "Type": "Ollama",
-      "MaxConcurrent" :  2
+      "MaxConcurrent":2
     },
 
     {
-      "Name": "Llama3.2",
+      "Name": "llama3.2-vision:latest",
+      "Url": "http://192.168.88.105:11434",
+      "Type": "Ollama",
+      "MaxConcurrent": 2
+    },
+
+    {
+
+      "Name": "mistral:latest",
       "Url": "http://192.168.88.104:11434",
       "Type": "Ollama",
       "MaxConcurrent": 2
